src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) int dnn_Layer_preferableTarget_get(void* self);
extern "C" __declspec(dllexport) void dnn_Layer_preferableTarget_set(void* self, int val);
extern "C" __declspec(dllexport) void dnn_LayerParams_Delete(void* self);
extern "C" __declspec(dllexport) void* dnn_LayerParams_New_0();
extern "C" __declspec(dllexport) void dnn_Model_Delete(void* self);
extern "C" __declspec(dllexport) void* dnn_Model_New_0(const char* model, const char* config);
extern "C" __declspec(dllexport) void* dnn_Model_New_1(void* network);
extern "C" __declspec(dllexport) void* dnn_Model_setInputSize_0(void* self, cv::Size size);
extern "C" __declspec(dllexport) void* dnn_Model_setInputSize_1(void* self, int width, int height);
extern "C" __declspec(dllexport) void* dnn_Model_setInputMean_0(void* self, cv::Scalar mean);
extern "C" __declspec(dllexport) void* dnn_Model_setInputScale_0(void* self, cv::Scalar scale);
extern "C" __declspec(dllexport) void* dnn_Model_setInputCrop_0(void* self, bool crop);
extern "C" __declspec(dllexport) void* dnn_Model_setInputSwapRB_0(void* self, bool swapRB);
extern "C" __declspec(dllexport) void* dnn_Model_setOutputNames_0(void* self, void* outNames);
extern "C" __declspec(dllexport) void dnn_Model_setInputParams_0(void* self, double scale, cv::Size size, cv::Scalar mean, bool swapRB, bool crop);
extern "C" __declspec(dllexport) void dnn_Model_predict_0(void* self, void* frame, void* outs);
extern "C" __declspec(dllexport) void* dnn_Model_setPreferableBackend_0(void* self, void* backendId);
extern "C" __declspec(dllexport) void* dnn_Model_setPreferableTarget_0(void* self, void* targetId);
extern "C" __declspec(dllexport) void* dnn_Model_enableWinograd_0(void* self, bool useWinograd);
extern "C" __declspec(dllexport) void dnn_Net_Delete(void* self);
extern "C" __declspec(dllexport) void* dnn_Net_New_0();
extern "C" __declspec(dllexport) void* dnn_Net_readFromModelOptimizer_0(const char* xml, const char* bin);
extern "C" __declspec(dllexport) void* dnn_Net_readFromModelOptimizer_1(void* bufferModelConfig, void* bufferWeights);
extern "C" __declspec(dllexport) bool dnn_Net_empty_0(void* self);
extern "C" __declspec(dllexport) const char* dnn_Net_dump_0(void* self);
extern "C" __declspec(dllexport) void dnn_Net_dumpToFile_0(void* self, const char* path);
extern "C" __declspec(dllexport) void dnn_Net_dumpToPbtxt_0(void* self, const char* path);
extern "C" __declspec(dllexport) int dnn_Net_addLayer_0(void* self, const char* name, const char* type, int dtype, void* params);
extern "C" __declspec(dllexport) int dnn_Net_addLayerToPrev_0(void* self, const char* name, const char* type, int dtype, void* params);
extern "C" __declspec(dllexport) int dnn_Net_getLayerId_0(void* self, const char* layer);
extern "C" __declspec(dllexport) void* dnn_Net_getLayerNames_0(void* self);
extern "C" __declspec(dllexport) void* dnn_Net_getLayer_0(void* self, int layerId);
extern "C" __declspec(dllexport) void* dnn_Net_getLayer_1(void* self, const char* layerName);
extern "C" __declspec(dllexport) void* dnn_Net_getLayer_2(void* self, void* layerId);
extern "C" __declspec(dllexport) void dnn_Net_connect_0(void* self, const char* outPin, const char* inpPin);
extern "C" __declspec(dllexport) int dnn_Net_registerOutput_0(void* self, const char* outputName, int layerId, int outputPort);
extern "C" __declspec(dllexport) void dnn_Net_setInputsNames_0(void* self, void* inputBlobNames);
extern "C" __declspec(dllexport) void dnn_Net_setInputShape_0(void* self, const char* inputName, void* shape);
extern "C" __declspec(dllexport) void* dnn_Net_forward_0(void* self, const char* outputName);
extern "C" __declspec(dllexport) void* dnn_Net_forwardAsync_0(void* self, const char* outputName);
extern "C" __declspec(dllexport) void dnn_Net_forward_1(void* self, void* outputBlobs, const char* outputName);
extern "C" __declspec(dllexport) void dnn_Net_forward_2(void* self, void* outputBlobs, void* outBlobNames);
extern "C" __declspec(dllexport) void dnn_Net_setPreferableBackend_0(void* self, int backendId);
extern "C" __declspec(dllexport) void dnn_Net_setPreferableTarget_0(void* self, int targetId);
extern "C" __declspec(dllexport) void dnn_Net_finalizeNet_0(void* self);
extern "C" __declspec(dllexport) void dnn_Net_setTracingMode_0(void* self, int tracingMode);
extern "C" __declspec(dllexport) int dnn_Net_getTracingMode_0(void* self);
extern "C" __declspec(dllexport) void dnn_Net_setProfilingMode_0(void* self, int profilingMode);
extern "C" __declspec(dllexport) int dnn_Net_getProfilingMode_0(void* self);
extern "C" __declspec(dllexport) int dnn_Net_getModelFormat_0(void* self);
extern "C" __declspec(dllexport) void dnn_Net_setInput_0(void* self, void* blob, const char* name, double scalefactor, cv::Scalar mean);
extern "C" __declspec(dllexport) void dnn_Net_setParam_0(void* self, int layer, int numParam, void* blob);
extern "C" __declspec(dllexport) void dnn_Net_setParam_1(void* self, const char* layerName, int numParam, void* blob);
extern "C" __declspec(dllexport) void* dnn_Net_getParam_0(void* self, int layer, int numParam);
extern "C" __declspec(dllexport) void* dnn_Net_getParam_1(void* self, const char* layerName, int numParam);
extern "C" __declspec(dllexport) void* dnn_Net_getUnconnectedOutLayers_0(void* self);
extern "C" __declspec(dllexport) void* dnn_Net_getUnconnectedOutLayersNames_0(void* self);
extern "C" __declspec(dllexport) void dnn_Net_getLayerShapes_0(void* self, void* netInputShapes, void* netInputTypes, int layerId, void* inLayerShapes, void* outLayerShapes);
extern "C" __declspec(dllexport) int64 dnn_Net_getFLOPS_0(void* self, void* netInputShapes, void* netInputTypes);