src/OpenCV5Sharp/Generated/NativeMethods.Dnn.cs

        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int dnn_Layer_preferableTarget_get(DnnLayerHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Layer_preferableTarget_set(DnnLayerHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_LayerParams_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_LayerParams_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Model_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_Model_New_0([MarshalAs(UnmanagedType.LPUTF8Str)] string? model, [MarshalAs(UnmanagedType.LPUTF8Str)] string? config);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_Model_New_1(IntPtr network);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_Model_setInputSize_0(DnnModelHandle self, Size size);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_Model_setInputSize_1(DnnModelHandle self, int width, int height);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_Model_setInputMean_0(DnnModelHandle self, Scalar mean);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_Model_setInputScale_0(DnnModelHandle self, Scalar scale);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_Model_setInputCrop_0(DnnModelHandle self, [MarshalAs(UnmanagedType.U1)] bool crop);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_Model_setInputSwapRB_0(DnnModelHandle self, [MarshalAs(UnmanagedType.U1)] bool swapRB);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_Model_setOutputNames_0(DnnModelHandle self, IntPtr outNames);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Model_setInputParams_0(DnnModelHandle self, double scale, Size size, Scalar mean, [MarshalAs(UnmanagedType.U1)] bool swapRB, [MarshalAs(UnmanagedType.U1)] bool crop);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Model_predict_0(DnnModelHandle self, MatHandle frame, IntPtr outs);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_Model_setPreferableBackend_0(DnnModelHandle self, int backendId);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_Model_setPreferableTarget_0(DnnModelHandle self, int targetId);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_Model_enableWinograd_0(DnnModelHandle self, [MarshalAs(UnmanagedType.U1)] bool useWinograd);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Net_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_Net_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_Net_readFromModelOptimizer_0([MarshalAs(UnmanagedType.LPUTF8Str)] string? xml, [MarshalAs(UnmanagedType.LPUTF8Str)] string? bin);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_Net_readFromModelOptimizer_1(IntPtr bufferModelConfig, IntPtr bufferWeights);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool dnn_Net_empty_0(DnnNetHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_Net_dump_0(DnnNetHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Net_dumpToFile_0(DnnNetHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? path);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Net_dumpToPbtxt_0(DnnNetHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? path);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int dnn_Net_addLayer_0(DnnNetHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? name, [MarshalAs(UnmanagedType.LPUTF8Str)] string? type, int dtype, IntPtr @params);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int dnn_Net_addLayerToPrev_0(DnnNetHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? name, [MarshalAs(UnmanagedType.LPUTF8Str)] string? type, int dtype, IntPtr @params);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int dnn_Net_getLayerId_0(DnnNetHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? layer);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_Net_getLayerNames_0(DnnNetHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_Net_getLayer_0(DnnNetHandle self, int layerId);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_Net_getLayer_1(DnnNetHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? layerName);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_Net_getLayer_2(DnnNetHandle self, IntPtr layerId);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Net_connect_0(DnnNetHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? outPin, [MarshalAs(UnmanagedType.LPUTF8Str)] string? inpPin);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int dnn_Net_registerOutput_0(DnnNetHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? outputName, int layerId, int outputPort);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Net_setInputsNames_0(DnnNetHandle self, IntPtr inputBlobNames);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Net_setInputShape_0(DnnNetHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? inputName, MatShapeHandle shape);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_Net_forward_0(DnnNetHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? outputName);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_Net_forwardAsync_0(DnnNetHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? outputName);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Net_forward_1(DnnNetHandle self, IntPtr outputBlobs, [MarshalAs(UnmanagedType.LPUTF8Str)] string? outputName);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Net_forward_2(DnnNetHandle self, IntPtr outputBlobs, IntPtr outBlobNames);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Net_setPreferableBackend_0(DnnNetHandle self, int backendId);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Net_setPreferableTarget_0(DnnNetHandle self, int targetId);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Net_finalizeNet_0(DnnNetHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Net_setTracingMode_0(DnnNetHandle self, int tracingMode);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int dnn_Net_getTracingMode_0(DnnNetHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Net_setProfilingMode_0(DnnNetHandle self, int profilingMode);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int dnn_Net_getProfilingMode_0(DnnNetHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int dnn_Net_getModelFormat_0(DnnNetHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Net_setInput_0(DnnNetHandle self, MatHandle blob, [MarshalAs(UnmanagedType.LPUTF8Str)] string? name, double scalefactor, Scalar mean);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Net_setParam_0(DnnNetHandle self, int layer, int numParam, MatHandle blob);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Net_setParam_1(DnnNetHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? layerName, int numParam, MatHandle blob);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_Net_getParam_0(DnnNetHandle self, int layer, int numParam);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_Net_getParam_1(DnnNetHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? layerName, int numParam);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_Net_getUnconnectedOutLayers_0(DnnNetHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_Net_getUnconnectedOutLayersNames_0(DnnNetHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Net_getLayerShapes_0(DnnNetHandle self, IntPtr netInputShapes, IntPtr netInputTypes, int layerId, IntPtr inLayerShapes, IntPtr outLayerShapes);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern long dnn_Net_getFLOPS_0(DnnNetHandle self, IntPtr netInputShapes, IntPtr netInputTypes);
